--- a/TucanchayaV1/TucanchayaV1/View/Menu.xaml
+++ b/TucanchayaV1/TucanchayaV1/View/Menu.xaml
@@ -1,28 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
+<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:TucanchayaV1"
              x:Class="TucanchayaV1.View.Menu"
             Title="Menu">
-    <TabbedPage.Children>
-        <NavigationPage Title="Browse">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
 
-        </NavigationPage>
+    <StackLayout>
+        <ListView x:Name="ListView">
+            <ListView.ItemsSource>
+                <x:Array Type="{x:Type local:MasterPageItem}">
+                    <local:MasterPageItem Titulo="Cancha" Icono="cancha.png" TipoPagina="{x:Type local:Canchas}"></local:MasterPageItem>
+                    <local:MasterPageItem Titulo="Cabhear Puntos" Icono="start.png" TipoPagina="{x:Type local:Pu}"></local:MasterPageItem>
+                </x:Array>
+            </ListView.ItemsSource>
+        </ListView>
+    </StackLayout>
 
-        <NavigationPage Title="About">
-            <NavigationPage.Icon>
-                <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_about.png"/>
-                </OnPlatform>
-            </NavigationPage.Icon>
-            <x:Arguments>
-                <views:AboutPage />
-            </x:Arguments>
-        </NavigationPage>
-    </TabbedPage.Children>
-
-</TabbedPage>
+</ContentPage>
